--- a/easy_sheets/accounts/templates/profile.html
+++ b/easy_sheets/accounts/templates/profile.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 {% block title %}
@@ -11,7 +10,10 @@ Profile
     <div class="card mx-auto" style="max-width: 500px;">
         <div class="card-body">
             <h5 class="card-title">User Information</h5>
-            <p class="card-text"><strong>Name:</strong> {{ user.get_full_name }}</p>
+            <p class="card-text">
+                <strong>Name:</strong> 
+                {{ user.name }} {{ user.surname_1 }}{% if user.surname_2 %} {{ user.surname_2 }}{% endif %}
+            </p>
             <p class="card-text"><strong>Email:</strong> {{ user.email }}</p>
             {% if user.role %}
                 <p class="card-text"><strong>Role:</strong> {{ user.get_role_display }}</p>
