--- a/easy_sheets/accounts/templates/profile_form.html
+++ b/easy_sheets/accounts/templates/profile_form.html
@@ -41,8 +41,8 @@ Profile
                             <p class="mt-3"><strong>Role:</strong> {{ user.get_role_display }}</p>
                         {% endif %}
                         <p class="mt-3">
-                            If you want to edit your email, click <a href="#">here</a>.<br>
-                            If you want to change your password, click <a href="#">here</a>.
+                            If you want to edit your email, click <a href="{% url 'profile_email' %}">here</a>.<br>
+                            If you want to change your password, click <a href="{% url 'password_change' %}">here</a>.
                         </p>
                         <input type="submit" class="btn btn-primary btn-block mt-3" value="Update">
                     </div>
