--- a/easy_sheets/accounts/templates/accounts/profile_form.html
+++ b/easy_sheets/accounts/templates/accounts/profile_form.html
@@ -45,6 +45,10 @@ Profile
                             If you want to change your password, click <a href="{% url 'password_change' %}">here</a>.
                         </p>
                         <input type="submit" class="btn btn-primary btn-block mt-3" value="Update">
+                        <!-- Button to view sheets (only for teachers) -->
+                        {% if user.role == 'teacher' %}
+                            <a href="#" class="btn btn-success btn-block mt-3">View My Sheets</a>
+                        {% endif %}
                     </div>
                 </div>
             </form>
