Add classrooms app for classroom management

--- a/easy_sheets/accounts/templates/accounts/profile.html
+++ b/easy_sheets/accounts/templates/accounts/profile.html
@@ -49,6 +49,7 @@ Profile
     </div>
     <div class="text-center mt-3">
         <a href="{% url 'teacher_sheets' %}" class="btn btn-info">Ver Mis Hojas</a>
+        <a href="{% url 'classroom_list' %}" class="btn btn-info btn-block mt-3">View My Classes</a>
     </div>
     {% endif %}
 </div>
