--- a/easy_sheets/easy_sheets/templates/base.html
+++ b/easy_sheets/easy_sheets/templates/base.html
@@ -6,6 +6,7 @@
     <title>{% block title %}EasySheets{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Select2 CSS -->
     {% block extra_css %}{% endblock %}
 </head>
 <body>
