Enhance interactive sheet functionality and access control

--- a/easy_sheets/interactive_sheets/templates/interactive_sheets/create_sheet.html
+++ b/easy_sheets/interactive_sheets/templates/interactive_sheets/create_sheet.html
@@ -56,7 +56,7 @@ Crear Ficha Interactiva
         </div>
 
         <!-- Área Interactiva -->
-        <div class="interactive-area-container">
+        <div class="interactive-area-container" id = "interactive-area-container">
             <div id="interactive-area" class="interactive-area">
                 <img id="uploaded-image" src="#" alt="Imagen Base" class="img-fluid" style="display: none;">
             </div>
