feat: Add notebook management functionality including creation, editing, and deletion

--- a/easy_sheets/accounts/templates/accounts/profile.html
+++ b/easy_sheets/accounts/templates/accounts/profile.html
@@ -51,6 +51,9 @@ Profile
         <a href="{% url 'teacher_sheets' %}" class="btn btn-info">Ver Mis Hojas</a>
         <a href="{% url 'classroom_list' %}" class="btn btn-info btn-block mt-3">View My Classes</a>
     </div>
+    <div class="text-center mt-3">
+        <a href="{% url 'list_notebooks' %}" class="btn btn-warning">Ver Mis Cuadernos</a>
+    </div>
     {% endif %}
     <!-- Options for Students -->
     {% if user.role == 'student' %}
